--- a/estilos/redes.css
+++ b/estilos/redes.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+
 * {
     margin: 0px;
     padding: 0px;
@@ -8,28 +9,31 @@
 ::-webkit-scrollbar {
     width: 0px;
     height: 0px;
-    
 }
-
 
 img {
     width: 100vw;
+    
 }
 
-
-body a {
+a {
     display: block;
-    background-color: grey;
-    color: white;
-    padding: 20px;
-    text-align: center;
+    font-size: 1.2em;
+    background-color: green;
+    color: white ;
+    padding: 10px;
     text-decoration: none;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    text-align: center;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+    box-sizing: border-box;
+
+    
 }
 
-
-body a:hover {
+a:hover {
     font-weight: bold;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    background-color: rgba(128, 128, 128, 0.8);
+    font-size: 1.2em;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+    background-color: white;
+    color: green;
 }
